[package]
name = "autumn-of-empires"
version = "0.1.2"
edition = "2021"
publish = false
authors = ["Lorenzo Ravaglia <lorenzo.ravaglia@hope.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
clap = { version = "4.1.4", features = ["derive"] }
clap_complete = "4.1.1"
color-eyre = { version = "0.6.2", features = ["issue-url", "url"] }
const_format = "0.2.30"
dotenvy = "0.15.6"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["serde", "std"] }
nanorand = "0.7.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["std", "derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.24.2", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v7"] }
